Director approval page caculation and ui error fixed

--- a/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
@@ -22,9 +22,7 @@
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">
-            Project Manager Approval
-        </li>
+        <li class="active">Project Manager Approval</li>
     </ol>
 </section>
 
@@ -404,5 +402,6 @@
         }
 
         TotalCalculator();
+
     </script>
 }
